# ROS_NAVIGATION_AND_SEARCH_CHALLENGE

./: CMakeLists.txt  package.xml
action/: Explore.action  Vision.action
config/: global_costmap_params.yaml  local_costmap_params.yaml  trajectory_planner.yaml
launch/: controller.launch  explorer.launch  find_object.launch  navigation.launch  rosbot_pro.launch  tracker.launch  vision.launch
src/: controller.py  explorer.py  tracker.py  vision.py
